--- a/page/templates/page/about.html
+++ b/page/templates/page/about.html
@@ -171,7 +171,7 @@
         <div class="aboutUs_main">
             <h1>About Us</h1>
             <p>
-                SUMMER INTERNSHIP CLUB is a special interest group of GITAM. We are
+                STUDENT INTERNSHIP CLUB is a special interest group of GITAM. We are
                 oriented in all field of study.
             </p>
         </div>
@@ -264,7 +264,7 @@
         <br>
         <div class="row pb-5">
             <div class="col-lg-6 col-12">
-                <h5 class="text-left">Why should I join Summer Internship Club?</h5>
+                <h5 class="text-left">Why should I join Student Internship Club?</h5>
                 <p class="text-left lead" style="font-size: 15px;"> the main moto of SIC is learn - build - grow with
                     the community. we help student of GITAM to find internship opportunities</p>
             </div>
