--- a/page/templates/page/internships.html
+++ b/page/templates/page/internships.html
@@ -260,6 +260,12 @@ background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
 .masthead-page {
     padding: 1rem 0 4rem
 }
+.selectStreamButtons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 .selectStreamButtons button{
     margin-bottom: 20px;
 }
@@ -508,7 +514,7 @@ background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
         </div>
     </div>-->
     <div class="selectStreamButtons">
-       
+
     {% for branch in branches %}
             <a class="bn40" href="{% url 'internship_branch' branch %}"><button class="bn30">{{branch}}</button></a>
         {% endfor %}
