--- a/page/templates/page/hackathons.html
+++ b/page/templates/page/hackathons.html
@@ -1,10 +1,13 @@
 {% extends "page/base.html" %} {% block content %} {% load static %}
 <style>
   body {
-    background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-
-
+    background-color: #4158d0;
+    background-image: linear-gradient(
+      43deg,
+      #4158d0 0%,
+      #c850c0 46%,
+      #ffcc70 100%
+    );
   }
 
   .card {
