--- a/page/templates/page/about.html
+++ b/page/templates/page/about.html
@@ -1,223 +1,310 @@
-{% extends "page/base.html" %}
-{% block content %}
-{% load static %}
+{% extends "page/base.html" %} {% block content %} {% load static %}
 <style>
-    .fullcontainer{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .fullcontainer > div{
-        margin: 10px auto auto ;
-        padding: 10px;
-        width: 290px;
-    }
-    .card:hover{
-     transform: scale(1.05);
-     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-    }
-    .card{
+  .fullcontainer {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .fullcontainer > div {
+    margin: 10px auto auto;
+    padding: 10px;
+    width: 290px;
+  }
+  .asliaboutus {
+    font-weight: 400;
+    color: grey;
+  }
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+  }
+  .card {
     border-radius: 4px;
     background: #fff;
-    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+    transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+      0.3s box-shadow,
+      0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
     padding: 14px 25px 18px 36px;
     cursor: pointer;
-    }
-    .center{
-        text-align:center;
-        width: 100%;
-    }
-    a {
-       text-decoration:none;
-       color: inherit;
-    }
-    .center justify-content{
-        margin-left:25px;
-    }
-    .main {
-      width: 74%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin-left: 11rem;
-    }
-    .aboutUs {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-    }
-    .aboutUs_image {
-      width: 45%;
-    }
-    .aboutUs_main {
-      flex: 0 0 30%;
-    }
-    .aboutUs_main h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
-    }
-    .aboutUs_main p {
-      font-size: 1.2rem;
-    }
-    .thingsWeDo {
-      margin-top: 2rem;
-      display: flex;
-      flex-direction: column;
-    }
-    .thingsWeDo h1 {
-      margin-left: 0rem;
-      font-size: 2.2rem;
-    }
-    .thingsWeDo_main {
-      margin-top: 1rem;
-    }
-    .thingsWeDo_main-para {
-      display: flex;
-      align-items: flex-start;
-    }
-    .thingsWeDo_main-para p {
-      margin-left: 3rem;
-      font-size: 1.2rem;
-      margin-top: 0.3rem;
-      flex: 0 0 75%;
-    }
-    .lastPara {
-      display: flex;
-      align-items: center;
-      margin-top: 0.2rem;
-    }
-    .lastPara p {
-      flex: 0 0 50%;
-      font-size: 1.2rem;
-      line-height: 1.5rem;
-    }
-    .lastPara img {
-      width: 40%;
-      margin-left: 4rem;
-    }
-    img {
-      height: auto;
-      max-width: 100%;
-      vertical-align: middle;
-    }
-    .btn:hover {
-      background-color: rgba(255, 255, 255, 0.12);
-    }
-
+  }
+  .center {
+    text-align: center;
+    width: 100%;
+  }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  .center justify-content {
+    margin-left: 25px;
+  }
+  .main {
+    width: 74%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 11rem;
+  }
+  .aboutUs {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .aboutUs_image {
+    width: 45%;
+  }
+  .aboutUs_main {
+    flex: 0 0 30%;
+  }
+  .aboutUs_main h1 {
+    font-size: 2.2rem;
+    margin-bottom: 0.5rem;
+  }
+  .aboutUs_main p {
+    font-size: 1.2rem;
+  }
+  .thingsWeDo {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .thingsWeDo h1 {
+    margin-left: 0rem;
+    font-size: 2.2rem;
+  }
+  .thingsWeDo_main {
+    margin-top: 1rem;
+  }
+  .thingsWeDo_main-para {
+    display: flex;
+    align-items: flex-start;
+  }
+  .thingsWeDo_main-para p {
+    margin-left: 3rem;
+    font-size: 1.2rem;
+    margin-top: 0.3rem;
+    flex: 0 0 75%;
+  }
+  .lastPara {
+    display: flex;
+    align-items: center;
+    margin-top: 0.2rem;
+  }
+  .lastPara p {
+    flex: 0 0 50%;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+  }
+  .lastPara img {
+    width: 40%;
+    margin-left: 4rem;
+  }
+  img {
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
+  }
+  .btn:hover {
+    background-color: rgba(255, 255, 255, 0.12);
+  }
 </style>
-<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://source.unsplash.com/1600x550/?Science" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Science</h5>
-                <p>nce is the pursuit and application of knowledge and understanding of the natural and social world
-                    following a systematic methodology based on evidence. </p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x550/?medical" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Medicine</h5>
-                <p>Medicines are chemicals or compounds used to cure, halt, or prevent disease; ease symptoms</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x550/?Technology" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Technology</h5>
-                <p>Technology is the sum of any techniques, skills, methods, and processes used in the production of
-                    goods or services or in the accomplishment of objectives, such as scientific investigation</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x550/?Law" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>LAW</h5>
-                <p>The law is legislation created and enforced through social or governmental institutions to regulate
-                    behavior, with its precise definition a matter of longstanding debate. It has been variously
-                    described as a science and the art of justice.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="https://source.unsplash.com/1600x550/?business" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>BUSINESS</h5>
-                <h5>Business is the activity of making one's living or making money by producing or buying and selling
-                    products Simply put, it is "any activity or enterprise</h5>
-                <p></p>
-            </div>
-        </div>
+<div
+  id="carouselExampleCaptions"
+  class="carousel slide carousel-fade"
+  data-bs-ride="carousel"
+>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        src="https://source.unsplash.com/1600x550/?Science"
+        class="d-block w-100"
+        alt="..."
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Science</h5>
+        <p>
+          nce is the pursuit and application of knowledge and understanding of
+          the natural and social world following a systematic methodology based
+          on evidence.
+        </p>
+      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-    <br><br><br><br>
+    <div class="carousel-item">
+      <img
+        src="https://source.unsplash.com/1600x550/?medical"
+        class="d-block w-100"
+        alt="..."
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Medicine</h5>
+        <p>
+          Medicines are chemicals or compounds used to cure, halt, or prevent
+          disease; ease symptoms
+        </p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://source.unsplash.com/1600x550/?Technology"
+        class="d-block w-100"
+        alt="..."
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Technology</h5>
+        <p>
+          Technology is the sum of any techniques, skills, methods, and
+          processes used in the production of goods or services or in the
+          accomplishment of objectives, such as scientific investigation
+        </p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://source.unsplash.com/1600x550/?Law"
+        class="d-block w-100"
+        alt="..."
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h5>LAW</h5>
+        <p>
+          The law is legislation created and enforced through social or
+          governmental institutions to regulate behavior, with its precise
+          definition a matter of longstanding debate. It has been variously
+          described as a science and the art of justice.
+        </p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://source.unsplash.com/1600x550/?business"
+        class="d-block w-100"
+        alt="..."
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h5>BUSINESS</h5>
+        <h5>
+          Business is the activity of making one's living or making money by
+          producing or buying and selling products Simply put, it is "any
+          activity or enterprise
+        </h5>
+        <p></p>
+      </div>
+    </div>
+  </div>
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExampleCaptions"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExampleCaptions"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
-<section class="main">
-    <!-- <h1 class="display-4">Club inspired by fun</h1> -->
-    <div class="aboutUs">
+<div class="bg-light">
+  <div class="container py-5">
+    <div class="row h-100 align-items-center pt-5">
+      <div class="col-lg-6">
+        <h1 class="font-weight-light">About Us ✨</h1>
+        <p class="lead mb-0 asliaboutus">
+          SUMMER INTERNSHIP CLUB is a special interest group of GITAM. We are
+          oriented in all field of study. Our group focuses on upcoming training
+          opportunities (Research Intern, Dissertation projects, Jobs, etc.) and
+          related information with the latest workshops/conferences/webinars
+          meant for one's career
+        </p>
+        <p class="lead">
+          Here are our
+          <a href="/contactus/" class="text-muted"> <u>Socials</u></a>
+        </p>
+      </div>
+      <div class="col-lg-6 d-none d-lg-block">
         <img
-                class="aboutUs_image"
-                src="{% static 'images/aboutus.jpg' %}"
-                alt=""
+          src="https://bootstrapious.com/i/snippets/sn-about/illus.png"
+          alt=""
+          class="img-fluid"
         />
-        <div class="aboutUs_main">
-            <h1>About Us</h1>
-            <p>
-                STUDENT INTERNSHIP CLUB is a special interest group of GITAM. We are
-                oriented in all field of study.
-            </p>
-        </div>
+      </div>
     </div>
-    <hr class="main_line"/>
-    <div class="thingsWeDo">
+  </div>
+</div>
+
+<div class="bg-white py-5">
+  <div class="container py-5">
+    <div class="row align-items-center mb-5">
+      <div class="thingsWeDo">
         <h1>Things We Do</h1>
         <div class="thingsWeDo_main">
-            <div class="thingsWeDo_main-para">
-                <p>
-                    ✅   Our group focuses on upcoming training opportunities (Research
-                    Intern, Dissertation projects, Jobs, etc.) and related information
-                    with the latest workshops/conferences/webinars meant for one's
-                    career.
-                </p>
-            </div>
-            <div class="thingsWeDo_main-para">
-                <p>
-                    ✅   To create passion towards various opportunities that are coming
-                    from multiple fields of study
-                </p>
-            </div>
-            <div class="thingsWeDo_main-para">
-                <p>✅    Notes/ebooks are also provided</p>
-            </div>
-            <div class="thingsWeDo_main-para">
-                <p>✅    Interaction with different expertise</p>
-            </div>
-            <div class="thingsWeDo_main-para">
-                <p>✅    Provides exam notifications on time</p>
-            </div>
+          <div class="thingsWeDo_main-para">
+            <p>
+              ✅ Our group focuses on upcoming training opportunities (Research
+              Intern, Dissertation projects, Jobs, etc.) and related information
+              with the latest workshops/conferences/webinars meant for one's
+              career.
+            </p>
+          </div>
+          <div class="thingsWeDo_main-para">
+            <p>
+              ✅ To create passion towards various opportunities that are coming
+              from multiple fields of study
+            </p>
+          </div>
+          <div class="thingsWeDo_main-para">
+            <p>✅ Notes/ebooks are also provided</p>
+          </div>
+          <div class="thingsWeDo_main-para">
+            <p>✅ Interaction with different expertise</p>
+          </div>
+          <div class="thingsWeDo_main-para">
+            <p>✅ Provides exam notifications on time</p>
+          </div>
         </div>
+      </div>
     </div>
-    <hr/>
-    <div class="lastPara">
-        <p>
+  </div>
+</div>
+<div class="bg-white">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="row align-items-center">
+        <div class="col-lg-5 px-5 mx-auto">
+          <img
+            src="https://media.istockphoto.com/vectors/young-people-are-standing-near-by-a-huge-smartphone-and-using-own-vector-id1167239929?k=20&m=1167239929&s=612x612&w=0&h=AcdvBz8NpT3vSF7igpYZlSmFe7w4x-EzfrZnmyyoka0="
+            alt=""
+            class="img-fluid mb-4 mb-lg-0"
+          />
+        </div>
+        <div class="col-lg-6">
+          <i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
+          <h2 class="font-weight-light">Socials</h2>
+          <p class="font-italic text-muted mb-4">
             We have three WhatsApp groups with 500 members approx. So far, with
             the help of the information provided by our club, 70 to 80 students
             have received internships in top universities and research labs like
-            IASc, Canadian fellowship, IITs, and many more. Our extensive network
-            of approachable experts helps you identify and secure the best
-            resources for your career development.
-        </p>
-        <img src="{% static 'images/thingswedo.jpg' %}" alt=""/>
+            IASc, Canadian fellowship, IITs, and many more. Our extensive
+            network of approachable experts helps you identify and secure the
+            best resources for your career development.
+          </p>
+          <a
+            href="/contactus/"
+            class="btn btn-light px-5 rounded-pill shadow-sm"
+            >Learn More</a
+          >
+        </div>
+      </div>
     </div>
-</section>
+  </div>
+</div>
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">OUR TEAM</h1>
     <p class="lead">Oh yeah, it's that good</p>
@@ -264,7 +351,7 @@
         <br>
         <div class="row pb-5">
             <div class="col-lg-6 col-12">
-                <h5 class="text-left">Why should I join Student Internship Club?</h5>
+                <h5 class="text-left">Why should I join Summer Internship Club?</h5>
                 <p class="text-left lead" style="font-size: 15px;"> the main moto of SIC is learn - build - grow with
                     the community. we help student of GITAM to find internship opportunities</p>
             </div>
@@ -290,4 +377,5 @@
     </div>
 </div>
 </div>
+
 {% endblock content %}
