--- a/page/templates/page/fellowships.html
+++ b/page/templates/page/fellowships.html
@@ -4,18 +4,18 @@
 <style>
   .fullcontainer{
     font-size: 15px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Prompt', sans-serif;
   }
   .card-body{
     font-size: 15px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Prompt', sans-serif;
     /* font-weight: bold; */
   }
   .card-body h4 a {
     font-weight: bold;
   }
     .heading {
-    font-family: "Inter", sans-serif;
+      font-family: 'Prompt', sans-serif;
     margin: 50px;
   }
   .heading h1 {
@@ -40,9 +40,9 @@
     .card-subtitle{
         color: #2092ed;
     }
-   
+
     .cardtwo {
-   
+
     box-shadow: 0 2px 4px 0 rgba(136, 144, 195, 0.2),
       0 5px 15px 0 rgba(37, 44, 97, 0.15);
     border-radius: 15px;
@@ -54,7 +54,7 @@
     min-height: 265px;
     transition: 0.7s;
 
-    
+
     }
     .cardtwo:hover {
       background-color: #FFDEE9;
@@ -104,12 +104,12 @@ background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
     .card-text{
         font-size: small;
         font-size: 15px;
-    font-family: 'Poppins', sans-serif;
+        font-family: 'Prompt', sans-serif;
     }
-   
- 
-    
-   .cardtwo 
+
+
+
+   .cardtwo
     hr {
     margin: 0
     }
@@ -121,19 +121,19 @@ background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
       display: flex;
       justify-content: space-around;
       align-items: center;
-    
+
     }
      .count {
     font-size: larger;
     font-weight: bold;
     text-align: center;
     margin-top: 1rem;
-    font-family: "Courier New", Courier, monospace;
+    font-family: 'Prompt', sans-serif;
   }
 </style>
-<link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
-    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Prompt:wght@400;600&display=swap" rel="stylesheet">
 <div class="container">
   <div class="heading"><h1>FELLOWSHIPS 🤖</h1></div>
 
@@ -145,9 +145,9 @@ background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
                 <div class="hover_color_bubble"></div>
                 <div class="card-body">
                     <h4><a href="{% url 'specific_fellowship' post.name %}">{{ post.name }}</a></h4>
-                    <h6 class="card-subtitle mb-2 text-muted">Role: {{ post.role }}</h6>
-                    <p class="card-text ">COMPANY:{{ post.comapny_org }}</p>
-                    <p class="card-text">Eligibility:{{post.eligibility}}</p>
+                    <h6 class="card-subtitle mb-2 text-muted">Duration: {{ post.duration }}</h6>
+                    <p class="card-text ">University/Org: {{ post.university_organization }}</p>
+                    <p class="card-text">Eligibility: {{post.eligibility}}</p>
                    
                     <hr>
                     <!-- <p>Referral Link: <a href=https://{{ post.referral_link }} class="card-l ink">{{ post.referral_link }}</a> -->
