--- a/page/templates/page/hackathons.html
+++ b/page/templates/page/hackathons.html
@@ -48,7 +48,10 @@
     margin-top: 10px;
   } */
 </style>
-
+<link
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  rel="stylesheet"
+/>
 <div class="container mx-auto mt-4">
   <h1>HACKATHONS 🚀</h1>
   <div class="row">
@@ -71,14 +74,16 @@
           <h5 class="card-title">{{ post.name }}</h5>
           <h6 class="card-subtitle mb-2 text-muted">{{ post.hosted_by }}</h6>
           <p class="card-text">Topics: {{ post.topics }}</p>
-          <p class="card-text">prize: {{ post.prize_money }}</p>
+          <p class="card-text">Prize: {{ post.prize_money_description }}</p>
           <p class="card-text">Start Date:<b> {{ post.start_date }}</b></p>
           <p class="card-text">End Date: <b>{{ post.end_date }}</b></p>
 
           <a href="{{ post.application_link }}" class="btn mr-2"
-            ><i class="fas fa-link"></i> Visit Site</a
+            ><i class="fa fa-link"></i> Visit Site</a
           >
-          <a href="#" class="btn"><i class="fab fa-github"></i> Register</a>
+          <a href="#" class="btn"
+            ><i class="fa fa-mouse-pointer"></i> Register</a
+          >
         </div>
       </div>
     </div>
