--- a/page/templates/page/stats.html
+++ b/page/templates/page/stats.html
@@ -122,7 +122,7 @@
 
   <div class="container">
   <div class="col-md-10 ">
-      <h1 class="heading">STATISTICS 🎓</h1>
+      <h1 class="heading">Demographics 🎓</h1>
     <div class="row ">
     <div class="firstCard" >
         <div class="card l-bg-cherry">
