--- a/page/templates/page/about.html
+++ b/page/templates/page/about.html
@@ -124,7 +124,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h5>Science</h5>
         <p>
-          Science is the pursuit and application of knowledge and understanding of
+          nce is the pursuit and application of knowledge and understanding of
           the natural and social world following a systematic methodology based
           on evidence.
         </p>
@@ -183,11 +183,11 @@
       />
       <div class="carousel-caption d-none d-md-block">
         <h5>BUSINESS</h5>
-        <p>
+        <h5>
           Business is the activity of making one's living or making money by
           producing or buying and selling products Simply put, it is "any
           activity or enterprise
-        </p>
+        </h5>
         <p></p>
       </div>
     </div>
