--- a/page/templates/page/base.html
+++ b/page/templates/page/base.html
@@ -293,7 +293,7 @@
         <div class="logo-image">
           <img src="{% static 'images/finallogo.png' %}" class="img-fluid" />
         </div>
-        <a class="navbar-brand" href="{% url 'page-about' %}">SIC</a>
+        <a class="navbar-brand" href="{% url 'page-about' %}">SIC X GCGC</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -323,7 +323,7 @@
               <a class="nav-link" href="{% url 'page-hackathons' %}">Hackathons</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact-us' %}">Contact Us</a>
+              <a class="nav-link" href="{% url 'events' %}">Events</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'archives' %}">Archives</a>
@@ -332,7 +332,7 @@
               <a class="nav-link" href="{% url 'stats' %}">Demographics</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'events' %}">Events</a>
+              <a class="nav-link" href="{% url 'contact-us' %}">Contact Us</a>
             </li>
 <!--            <li class="nav-item dropdown">-->
 <!--              <a-->
