--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,6 @@
 {% extends "page/base.html" %}
+{% load static %}
+{% load socialaccount %}
 {% load crispy_forms_tags %}
 {% block content %}
 <main role="main" class="container">
@@ -20,6 +22,8 @@
                     </fieldset>
                     <div class="form-group">
                         <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                        OR
+                        <a href="{% provider_login_url 'google' %}"><img src="{% static 'images/google_logo_dark.png' %}" class="img-fluid" /></a>
                     </div>
                 </form>
                 <br>
