--- a/page/templates/page/about.html
+++ b/page/templates/page/about.html
@@ -15,7 +15,7 @@
   }
 
   .carddev {
-    width: 350px;
+    /* width: 350px; */
     background-color: #efefef;
     border: none;
     cursor: pointer;
@@ -198,51 +198,41 @@ hr .new1 {
   .btn:hover {
     background-color: rgba(255, 255, 255, 0.12);
   }
+  .scroll-container{
+  overflow: auto;
+  padding: 5px 70px 5px 20px;
+  background: transparent;
+  height: 100%;
+  border-radius:15px;
+}
+
+.gridscroll{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+  @media(max-width:992px){
+    .developers{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 </style>
 
 <div class="herotextContainer">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquam, officia deleniti distinctio dolorem laborum aperiam quisquam nisi repellendus temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid facilis suscipit tempora eos labore minus modi ipsa enim vel ratione.
 </div>
-<div class="developerContainer">
-  <div class="devHeading">
-  <h2>SIC Website Developers</h2>
-</div>
-<div class="developers">
-
-  <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-    <div class="carddev p-4">
-        <div class=" image d-flex flex-column justify-content-center align-items-center"> <button > <img src="https://avatars.githubusercontent.com/u/63925819?v=4" height="150" width="150" /></button> <span class="name mt-3">Dheeraj</span> <span class="idd">@dheeraj</span>
-            <div class="d-flex flex-row justify-content-center align-items-center gap-2"> <span class="idd1">B.tech CSE</span> <span><i class="fa fa-copy"></i></span> </div>
-            <div class="d-flex flex-row justify-content-center align-items-center mt-3"> <span class="number">1069 <span class="follow">Followers</span></span> </div>
-            <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Edit Profile</button> </div>
-            <div class="text mt-3"> <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span> </div>
-            <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span><i class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span> <span><i class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span> </div>
-            <div class=" px-2 rounded mt-4 date "> <span class="join">Joined May,2021</span> </div>
-        </div>
-    </div>
-</div>
-<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-  <div class="carddev p-4">
-      <div class=" image d-flex flex-column justify-content-center align-items-center"> <button> <img src="https://avatars.githubusercontent.com/u/54280958?v=4" height="150" width="150" /></button> <span class="name mt-3">Krishna Chaitanya</span> <span class="idd">@xrishnachaitanya</span>
-          <div class="d-flex flex-row justify-content-center align-items-center gap-2"> <span class="idd1">Oxc4c16a645_b21a</span> <span><i class="fa fa-copy"></i></span> </div>
-          <div class="d-flex flex-row justify-content-center align-items-center mt-3"> <span class="number">1069 <span class="follow">Followers</span></span> </div>
-          <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Edit Profile</button> </div>
-          <div class="text mt-3"> <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span> </div>
-          <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span><i class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span> <span><i class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span> </div>
-          <div class=" px-2 rounded mt-4 date "> <span class="join">Joined May,2021</span> </div>
-      </div>
-  </div>
-</div>
-</div>
-</div>
-
 <div class="bg-light">
   <div class="container py-5">
     <div class="row h-100 align-items-center pt-5">
       <div class="col-lg-6">
         <h1 class="font-weight-light">About Us ✨</h1>
         <p class="lead mb-0 asliaboutus">
-          SUMMER INTERNSHIP CLUB is a special interest group of GITAM. We are
+          STUDENT INTERNSHIP CLUB is a special interest group of GITAM. We are
           oriented in all field of study. Our group focuses on upcoming training
           opportunities (Research Intern, Dissertation projects, Jobs, etc.) and
           related information with the latest workshops/conferences/webinars
@@ -263,7 +253,85 @@ hr .new1 {
     </div>
   </div>
 </div>
+<div class="bg-light">
+  <div class="container py-5">
+    <div class="row h-100 align-items-center pt-5 pb-5 asliaboutus lead">
+      
+        <h1 class="font-weight-light">GCGC 🤝</h1>
+        <p class="lead mb-2 ">
+          GCGC was established in 2020 as a new strategic Center focused on guiding, training and assisting students in finding careers of their choice. Its mission is to “Mentor, guide and prepare every student of GITAM into becoming a well-rounded professional and an empathetic human being, ready to step into her or his chosen career, equipped with competence, confidence and character.”  Since its inception, the GCGC at the university level and Campus Teams have been expanded as envisaged by the vision document. This document lays the roadmap for the future setting goals for each constituent Group.
+        </p>
+        <p><b>Vision : </b>Enable every student to fulfill her or his dream career choice</p>
+        <p><b>Mission Statement : </b>Mentor, guide and prepare every student of GITAM into becoming a well-rounded professional and an empathetic human being, ready to step into her or his chosen career, equipped with competence, confidence and character.</p>
+        <p>
+          <ul>
+            Objectives:
+            <li>Expanded scope from job-placements to “career fulfillment”</li>
+            <li>One GCG Cell per Campus – catering to all institutes</li>
+            <li>All students are included – no filters</li>
+            <li>Uniform university-level policies and curation; local execution</li>
+            <li>Coordinated effort among campuses vs. silo approach</li>
+            <li>Faculty’s active involvement a must for success. Shared responsibility</li>
+            <li>Commitment to “100% career-fulfillment”</li>
+            <li>Quality vs. Quantity: maximize potential</li>
+          </ul>
+        </p>
+    </div>
+  </div>
+</div>
+<div class="developerContainer">
+  <div class="devHeading">
+    <h2>SIC Website Mentors</h2>
+  </div>
+<div class="developers">
 
+
+<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+    <div class="carddev p-4">
+        <div class=" image d-flex flex-column justify-content-center align-items-center"> <button > <img src="https://media-exp1.licdn.com/dms/image/C5603AQGEw0BaoJsZ4A/profile-displayphoto-shrink_800_800/0/1517458148957?e=2147483647&v=beta&t=z0VZVtu3TTVoQKUcqyMSReyjcicRJXAnLkkOW079kds" height="150" width="150" /></button> <span class="name mt-3">Gurumoorthy Gangadharan</span> <span class="idd">@Gurumoorthy</span>
+            <div class="d-flex flex-row justify-content-center align-items-center gap-2"> <span class="idd1">Guide and mentor</span> <span><i class="fa fa-copy"></i></span> </div>
+            <div class="text mt-3"> <span>Deputy Director at GITAM Career Guidance Center (GCGC), GITAM | Assistant Professor - CSE | UGC NET </span> </div>
+            <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Connect</button> </div>
+           
+        </div>
+    </div>
+</div>
+<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+  <div class="carddev p-4">
+      <div class=" image d-flex flex-column justify-content-center align-items-center"> <button > <img src="https://media-exp1.licdn.com/dms/image/C5603AQG5M1-Yvr2LXQ/profile-displayphoto-shrink_800_800/0/1647499890525?e=1654128000&v=beta&t=YCFySz-NX6xikLSeC4KqydsUe-CmITj09eFgvqwHmIQ" height="150" width="150" /></button> <span class="name mt-3">Vikas B</span> <span class="idd">@vikassir</span>
+          <div class="d-flex flex-row justify-content-center align-items-center gap-2"> <span class="idd1">Guide and mentor</span> <span><i class="fa fa-copy"></i></span> </div>
+          <div class="text mt-3"> <span>Deputy Director at GITAM Career Guidance Center (GCGC), GITAM | Assistant Professor - CSE | UGC NET | </span> </div>
+          <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Connect</button> </div>
+      </div>
+  </div>
+</div>
+
+</div>
+<div class="devHeading">
+<h2>SIC Website Developers 💻</h2>
+</div>
+<div class="developers">
+  <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+    <div class="carddev p-4">
+        <div class=" image d-flex flex-column justify-content-center align-items-center"> <button > <img src="https://avatars.githubusercontent.com/u/63925819?v=4" height="150" width="150" /></button> <span class="name mt-3">Dheeraj</span> <span class="idd">@dheeraj</span>
+            <div class="d-flex flex-row justify-content-center align-items-center gap-2"> <span class="idd1">B.tech CSE</span> <span><i class="fa fa-copy"></i></span> </div>
+            <div class="text mt-3"> <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span> </div>
+            <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span><i class="fa fa-twitter"></i></span> <span><i class="fa fa-github"></i></span> <span><i class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span> </div>
+           
+        </div>
+    </div>
+</div>
+<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+  <div class="carddev p-4">
+      <div class=" image d-flex flex-column justify-content-center align-items-center"> <button> <img src="https://avatars.githubusercontent.com/u/54280958?v=4" height="150" width="150" /></button> <span class="name mt-3">Krishna Chaitanya</span> <span class="idd">@xrishnachaitanya</span>
+          <div class="d-flex flex-row justify-content-center align-items-center gap-2"> <span class="idd1">B.tech CSE</span> <span><i class="fa fa-copy"></i></span> </div>
+          <div class="text mt-3"> <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span> </div>
+          <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span><i class="fa fa-twitter"></i></span> <span><i class="fa fa-github"></i></span> <span><i class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span> </div>
+      </div>
+  </div>
+</div>
+</div>
+</div>
 <div class="bg-white py-5">
   <div class="container py-5">
     <div class="row align-items-center mb-5">
@@ -334,12 +402,13 @@ hr .new1 {
     <h1 class="display-4">OUR TEAM</h1>
     <p class="lead">Oh yeah, it's that good</p>
 </div>
-<div class="fullcontainer">
+<div class="scroll-container">
+  <div class="gridscroll">
     {% for member in members %}
-    <div class="card">
-        <img src="{{ member.image.url }}" class="card-img-top" alt="...">
+      <div class="card" style="min-width: 18rem; margin: 13px; padding: 10px 10px 10px 10px">
+          <img src="{{ member.image.url }}" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">{{ member.name }}</h5>
+          <h5 class="card-title">{{ member.name }}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{ member.domain }}</h6>
             <p class="card-text">{{ member.description }}</p>
             <div class="center justify-content">
@@ -365,9 +434,17 @@ hr .new1 {
                     </svg>
                 </a>
             </div>
+          <!-- <a href="{{ post.application_link }}" class="btn mr-2"
+            ><i class="fa fa-link"></i> Visit Site</a
+          >
+          <a href="#" class="btn"
+            ><i class="fa fa-mouse-pointer"></i> Register</a
+          > -->
         </div>
-    </div>
+      </div>
     {% endfor %}
+ 
+</div>
 </div>
 <br>
 <div id="faq" class="faq bg-light">
