--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,6 +3,21 @@
 {% load socialaccount %}
 {% load crispy_forms_tags %}
 {% block content %}
+<style>
+    form{
+        width: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+
+    }
+    .form-group2{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 30%;
+    }
+</style>
 <main role="main" class="container">
     <div class="row">
         <div class="col-md-8">
@@ -19,10 +34,12 @@
                     <fieldset class="form-group">
                         <legend class="border-bottom mb-4">Join Today</legend>
                         {{ form|crispy }}
+                    <button class="btn btn-outline-info" type="submit">Sign Up</button>
+
                     </fieldset>
-                    <div class="form-group">
-                        <button class="btn btn-outline-info" type="submit">Sign Up</button>
-                        OR
+
+                    <div class="form-group2">
+                        OR 
                         <a href="{% provider_login_url 'google' %}"><img src="{% static 'images/google_logo_dark.png' %}" class="img-fluid" /></a>
                     </div>
                 </form>
